--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Tweets</h1>
 
 <div id="tweets">
-  <% @tweets.each do |tweet| %>
+  <% @tweets.where(parent: nil).each do |tweet| %>
     <%= render tweet %>
     <p>
       <%= link_to "Show this tweet", tweet %>
