--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,6 +2,11 @@
 
 <h1>Tweets</h1>
 
+<%= form_with url: tweets_path, method: :post do |form| %>
+  <%= form.text_field :body %>
+  <%= form.submit "Tweet" %>
+<% end %>
+
 <div id="tweets">
   <% @tweets.where(parent: nil).each do |tweet| %>
     <%= render tweet %>
