--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
+<h2>Profile</h2>
 <div id="<%= dom_id user %>">
-  <p>
-    <strong>Email:</strong>
-    <%= user.email %>
-  </p>
+  <h3>
+    <%= user.name %>
+  </h3>
 
   <p>
     <strong>Username:</strong>
