--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,4 +1,8 @@
 <div id="<%= dom_id tweet %>">
+
+  <div>
+    <%= image_tag tweet.user.profile%>
+  </div>
   <p>
     <strong><%= tweet.user.name %></strong>
   </p>
