--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,15 @@
   </head>
 
   <body>
+    <%= link_to "Tweets", root_path%>
     <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
     <%unless current_user.nil?%>
       <div>         
         <p >Signed in as <%=current_user.username%></p>
       </div>
+    <%end%>
+    <% if user_signed_in?%>
+    <%= link_to "Profile", current_user%>
     <%end%>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
