--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -31,7 +31,7 @@
   </p>
 
   <div>
-    <%= link_to "Like", new_like_path  %>
+    <%= link_to 'Like', new_like_path(user_id: current_user.id, tweet_id: tweet.id), method: "post" %>
   </div>
 
     <%# tweet.user_id %>
