--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,23 @@
 
 <div id="users">
   <% @users.each do |user| %>
-    <%= render user %>
+    
+<div id="<%= dom_id user %>">
+  <% if user.profile.attached?%>
+  <div>
+    <%= image_tag user.profile%>
+  </div>
+  <%end%>
+  <h3>
+    <%= user.name %>
+  </h3>
+
+  <p>
+    @<%= user.username %>
+  </p>
+
+  <p>Joined on <%= time_tag(user.created_at, datetime: user.created_at.to_s, format: "%B %d, %Y") %></p>
+  <%= link_to "Edit this user", edit_user_registration_path %>
     <p>
       <%= link_to "Show this user", user %>
     </p>
