--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,8 +1,18 @@
+<div class= "bg-white min-w-20 p-10 flex items-center justify-center ">
+  <div class="bg-gray-800 border-gray-800 p-4 rounded-xl border max-w-xl">
+  <div class="flex justify-between">
+      <div class="flex items-center">
+         <%= image_tag tweet.user.profile, class:"h-11 w-11 rounded-full"%>
+        <div class="ml-1.5 text-sm leading-tight">
+          <span class="text-black dark:text-white font-bold block "><%= tweet.user.name %> <%= link_to "@#{tweet.user.username}", tweet.user, class:"text-gray-400 font-normal"%></span>
+          <span class="text-gray-500 dark:text-gray-400 font-normal block"><%= link_to "@#{tweet.user.username}", tweet.user%></span>
+        </div>
+      </div>
+      <svg class="text-blue-400 dark:text-white h-6 w-auto inline-block fill-current" viewBox="0 0 24 24"><g><path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path></g></svg>
+    </div>
+
 <div id="<%= dom_id tweet %>">
 
-  <div>
-    <%= image_tag tweet.user.profile%>
-  </div>
   <p>
     <strong><%= tweet.user.name %></strong>
   </p>
@@ -37,4 +47,6 @@
     <%# tweet.user_id %>
     <%# tweet.parent_id %>
 
+</div>
+</div>
 </div>
