--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,17 +2,17 @@
 
 <h1>Tweets</h1>
 
-<%= form_with url: tweets_path, method: :post do |form| %>
+<%= form_with model:@tweets, url: tweets_path, method: :post do |form| %>
   <%= form.text_field :body %>
   <%= form.submit "Tweet" %>
 <% end %>
 
 <div id="tweets">
-  <% @tweets.where(parent: nil).each do |tweet| %>
+  <% @tweets.where(parent: nil).each do |tweet|%>
+    
     <%= render tweet %>
-    <p>
-      <%= link_to "Show this tweet", tweet %>
-    </p>
+    
+   
   <% end %>
 </div>
 
