--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,21 +1,35 @@
-<h2>Profile</h2>
+<h2 class="text-gray-500">Profile</h2>
+<section class="pt-16 bg-blueGray-50">
+ <div class=" flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
 <div id="<%= dom_id user %>">
-  <% if user.profile.attached?%>
-  <div>
-    <%= image_tag user.profile%>
+  <div class="w-full px-4 flex justify-center">
+    <div class="relative">
+    <% if user.profile.attached?%>
+    <div>
+    <%= image_tag user.profile, class:"shadow-xl rounded-full h-auto align-middle border-none w-40 h-40 mb-5 max-w-150-px " %>
+    </div>
+    <%else%>
+    <div>
+    <%= image_tag "https://storroom.com/wp-content/uploads/2019/02/default-user.png", class:"shadow-xl rounded-full h-auto align-middle border-none w-40 h-40 mb-5 max-w-150-px " %>
+    </div>
+    <%end%>
+    </div>
   </div>
-  <%end%>
-  <h3>
-    <%= user.name %>
-  </h3>
+  <div class="text-center mt-12">
+    <h3 class="text-xl font-semibold leading-normal mb-2 text-blueGray-700">
+      <%= user.name %>
+    </h3>
+    <p class="text-md leading-normal mb-2 text-blueGray-700">
+      @<%= user.username %>
+    </p>
+  </div>
 
-  <p>
-    @<%= user.username %>
-  </p>
 
   <p>Joined on <%= time_tag(user.created_at, datetime: user.created_at.to_s, format: "%B %d, %Y") %></p>
   <%= link_to "Edit Profile", edit_user_registration_path(user) %>
   <%#user.role %>
+  </div>
+</section>
   <h3> Tweets (<%= user.tweets.size%>) </h3>
   <% user.tweets.each do |tweet| %>
     <%= render tweet %>
