--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,60 @@
   </head>
 
   <body class="bg-gray-100">
-    <%= link_to "Tweets", root_path%>
-    <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
-    <%unless current_user.nil?%>
-      <div>         
-        <p >Signed in as <%=current_user.username%></p>
+    <header>
+      <style>
+        .dropdown:focus-within .dropdown-menu {
+          opacity:1;
+          transform: translate(0) scale(1);
+          visibility: visible;
+        }
+      </style>
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+       <a href="/" class="flex items-center">
+        <img src="https://www.seekpng.com/png/detail/140-1402510_twitter-logo-white-twitter-logo-svg.png" class="h-8 mr-" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-black">Tweetable</span>
+       </a>
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      
+        <% if user_signed_in?%>
+        <%= link_to "Profile", current_user%>
+        <%end%>
+        </div>
+        <div class=" relative inline-block text-left dropdown">
+      <span class="rounded-md shadow-sm"
+      ><button class="relative z-10 block bg-gray-100 rounded mr-2 focus:outline-none"
+       type="button" aria-haspopup="true" aria-expanded="true" aria-controls="headlessui-menu-items-117">
+        <%# <span>Options</span> %>
+        
+         <svg height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z"/></svg>
+        </button
+      ></span>
+      <div class="opacity-0 invisible dropdown-menu transition-all duration-300 transform origin-top-right -translate-y-2 scale-95">
+      <div class="absolute right-0 w-56 mt-2 origin-top-right bg-white border border-gray-200 divide-y divide-gray-100 rounded-md shadow-2xl outline-none" aria-labelledby="headlessui-menu-button-1" id="headlessui-menu-items-117" role="menu">
+          <%unless current_user.nil?%>
+        <div class="px-4 py-3">         
+          <p class="text-sm leading-5">Signed in as</p>
+          <p class="text-sm font-medium leading-5 text-gray-900 truncate"><%=current_user.username%></p>
+        </div>
+          <%end%>
+        <div class="py-1">
+          <p tabindex="0" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-center"  role="menuitem">Thanks for using Tweetable!</p>
+          <% if user_signed_in?%>
+            <p tabindex="0" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-center"  role="menuitem" >
+              <%= link_to "Profile", current_user%>
+            </p>
+          <%end%>
+          <%# <a href="/games" tabindex="1" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-center"  role="menuitem" >Games</a>
+          <a href="/companies" tabindex="2" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-center" role="menuitem" >Companies</a></div> %>
+          <span role="menuitem" tabindex="-1" class="flex justify-between w-full px-4 py-2 text-sm leading-5 text-center text-gray-700" aria-disabled="false">
+            <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+          </span>
+        <%# <div class="py-1">
+          <a href="javascript:void(0)" tabindex="3" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-left"  role="menuitem" >Sign out</a></div>
+      </div> %>
       </div>
-    <%end%>
-    <% if user_signed_in?%>
-    <%= link_to "Profile", current_user%>
-    <%end%>
+      </div>
+    </header>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
      <div class="w-[32rem] mx-auto justify-center px-5">
