add: Setup Pundit

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,5 +1,5 @@
 <%= link_to tweet do%>
-  <div class="bg-gray-800 border-gray-800 p-4 rounded-xl border w-md">
+  <div class="bg-gray-800 border-gray-800 p-4 rounded-xl border w-md mb-4">
   <div class="flex flex-row justify-between">
       <div class="flex">
          <%= image_tag tweet.user.profile, class:"h-11 w-11 rounded-full"%>
