--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 grid">
     <header>
       <style>
         .dropdown:focus-within .dropdown-menu {
@@ -20,17 +20,12 @@
           visibility: visible;
         }
       </style>
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <div class="max-w-screen-xl flex justify-between mx-auto p-4">
        <a href="/" class="flex items-center">
         <img src="https://www.seekpng.com/png/detail/140-1402510_twitter-logo-white-twitter-logo-svg.png" class="h-8 mr-" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap text-black">{<span class ="text-gray-400">Tweet</span>able}</span>
        </a>
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      
-        <% if user_signed_in?%>
-        <%= link_to "Profile", current_user%>
-        <%end%>
-        </div>
+        
         <div class=" relative inline-block text-left dropdown">
       <span class="rounded-md shadow-sm"
       ><button class="relative z-10 block bg-gray-100 rounded mr-2 focus:outline-none"
