--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,8 +67,8 @@
         <%= yield %>
         </div>
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8 items-center">
-    <p class="flex justify-around items-center font-semibold text-gray-800 mb-5">© 2023 - Codeable Tweetable</p>
-      <p class="flex justify-around items-center font-semibold text-gray-800 mb-5">Build with &#9829 by KevinQuispe</p>
+    <p class="flex justify-around items-center text-gray-800 mb-5">© 2023 - Codeable Tweetable</p>
+      <p class="flex justify-around items-center text-gray-800 mb-5">Build with &#9829 by KevinQuispe</p>
     </div>
   </body>
 </html>
