--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,19 +1,13 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Tweets</h1>
-
-<%= form_with model:@tweets, url: tweets_path, method: :post do |form| %>
-  <%= form.text_field :body %>
-  <%= form.submit "Tweet" %>
-<% end %>
+<h1 class = "w-full text-center text-2xl font-semibold text-gray-600 my-2">Home</h1>
+<%= render "form" %>
 
 <div id="tweets">
   <% @tweets.where(parent: nil).each do |tweet|%>
     
     <%= render tweet %>
-    
    
   <% end %>
 </div>
 
-<%= link_to "New tweet", new_tweet_path %>
