chore: Order by new tweets

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,7 +4,7 @@
 <%= render "form" %>
 
 <div id="tweets">
-  <% @tweets.where(parent: nil).each do |tweet|%>
+  <% @tweets.where(parent: nil).order(created_at: :desc).each do |tweet|%>
     
     <%= render tweet %>
    
