--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,19 +30,19 @@
         <span class="self-center text-xl font-semibold whitespace-nowrap text-black">{<span class ="text-gray-400">Tweet</span>able}</span>
        </a>
         
-        <div class=" relative inline-block text-left dropdown">
-      <span class="rounded-md shadow-sm"
-      ><button class="relative z-10 block bg-gray-100 rounded mr-2 focus:outline-none"
+        <div class=" relative inline-block text-left dropdown ">
+      <span class="rounded-md shadow-sm "
+      ><button class="relative z-10 block bg-gray-100 rounded mr-2 focus:outline-none "
        type="button" aria-haspopup="true" aria-expanded="true" aria-controls="headlessui-menu-items-117">
         <%# <span>Options</span> %>
         
          <svg height="20px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="20px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z"/></svg>
         </button
       ></span>
-      <div class="opacity-0 invisible dropdown-menu transition-all duration-300 transform origin-top-right -translate-y-2 scale-95">
+      <div class="opacity-0 invisible dropdown-menu transition-all duration-300 transform origin-top-right -translate-y-2 scale-95 relative z-10 ">
       <div class="absolute right-0 w-56 mt-2 origin-top-right bg-white border border-gray-200 divide-y divide-gray-100 rounded-md shadow-2xl outline-none" aria-labelledby="headlessui-menu-button-1" id="headlessui-menu-items-117" role="menu">
           <%unless current_user.nil?%>
-        <div class="px-4 py-3">         
+        <div class="px-4 py-3 ">         
           <p class="text-sm leading-5">Signed in as</p>
           <p class="text-sm font-medium leading-5 text-gray-900 truncate"><%=current_user.username%></p>
         </div>
