--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -13,8 +13,13 @@
     </div>
   <% end %>
 
-  <div class="mt-4">
+  <div class="relative -z-2 ">
+  <div class="mt-4 relative -z-2 ">
     <%= form.text_area :body, class:"resize-none w-full shadow appearance-none border rounded h-32 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline", placeholder: "Remember to thing before write..." %>
+  </div>
+  <div class=" absolute end-2 bottom-3 -z-2">
+    <%= form.submit "Tweet", class:" bg-gray-700 hover:bg-gray-500 text-white font-normal py-1 px-4 rounded focus:outline-none focus:shadow-outline "%>
+  </div>
   </div>
 <!--
   <div>
@@ -32,13 +37,10 @@
     <%= form.text_field :parent_id %>
   </div>
   -->
-
   <div class = "hidden">
     <%= form.label :user_id, style: "display: block" %>
     <%= form.text_field :user_id, value: current_user.id %>
-  </div>
+  
 
-  <div>
-    <%= form.submit "Tweet"%>
-  </div>
+   </div>
 <% end %>
