chore: Profile Buttons

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <div class="relative -z-2 ">
+  <div class="relative -z-2 mb-3">
   <div class="mt-4 relative -z-2 ">
     <%= form.text_area :body, class:"resize-none w-full shadow appearance-none border rounded h-32 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline", placeholder: "Remember to thing before write..." %>
   </div>
