--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <h2 class="text-gray-500">Profile</h2>
 <section class="pt-16 bg-blueGray-50">
- <div class=" flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
+ <div class=" flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-md rounded-lg mt-16">
 <div id="<%= dom_id user %>">
   <div class="w-full px-4 flex justify-center">
     <div class="relative">
@@ -30,9 +30,9 @@
   <%#user.role %>
   </div>
 </section>
-  <div>
-    <button id="btn-1" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"><h3> Tweets (<%= user.tweets.size%>) </h3></button>
-    <button id="btn-2" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"><h3> Likes (<%= user.likes.size%>) </h3></button>
+  <div class= "flex justify-around mb-5">
+    <button id="btn-1" class="p-1 bg-gray-100 border-b-4 border-transparent hover:border-gray-400 hover:font-medium cursor-pointer px-8"><h3> Tweets (<%= user.tweets.size%>) </h3></button>
+    <button id="btn-2" class="p-1 bg-gray-100 border-b-4 border-transparent hover:border-gray-400  hover:font-medium cursor-pointer px-8"><h3> Likes (<%= user.likes.size%>) </h3></button>
   </div>
   <div id="content-1">
   
