add: Alert & Notice Styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body class="bg-gray-100 grid min-h-screen w-screen">
+  <body class="bg-gray-100 grid w-full">
     <header>
       <style>
         .dropdown:focus-within .dropdown-menu {
@@ -44,7 +44,7 @@
           <%unless current_user.nil?%>
         <div class="px-4 py-3 ">         
           <p class="text-sm leading-5">Signed in as</p>
-          <p class="text-sm font-medium leading-5 text-gray-900 truncate"><%=current_user.username%></p>
+          <p class="text-sm font-semibold leading-5 text-gray-900 truncate"><%=current_user.username%></p>
         </div>
           <%end%>
         <div class="py-1">
@@ -65,9 +65,34 @@
       </div>
       </div>
     </header>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-     <div class="w-96 mx-auto justify-center px-5">
+    <%if alert%>
+    <div class=" px-4 py-3 max-w-md mx-auto" role="alert">
+
+  
+      <div id="alert-2" class="flex p-4 mb-4 text-red-400 rounded-lg bg-gray-700" role="alert">
+      <svg aria-hidden="true" class="flex-shrink-0 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+      <span class="sr-only">Info</span>
+      <div class="ml-3 text-sm font-medium">
+        <%= alert %>
+    </div>
+    </div>
+
+    </div>
+     
+    <%end%>
+   
+     <%if notice%>
+    <div class=" px-4 py-3 w-xl mx-auto" role="alert2">
+      <div id="alert-2" class="flex p-4 mb-4 rounded-lg bg-gray-800 text-green-400"  role="alert2">
+      <svg aria-hidden="true" class="flex-shrink-0 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+      <span class="sr-only">Info</span>
+      <div class="ml-3 text-sm font-medium">
+        <%= notice %>
+    </div>
+    </div>
+    </div>
+    <%end%>
+     <div class="max-w-md mx-auto justify-center px-3">
         <%= yield %>
         </div>
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8 items-center text-sm">
